--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.cdnfonts.com/css/8bit-wonder');
+
+$pokeball-ui-radius:15vh;
+
 * {
     margin: 0;
     padding: 0;
@@ -5,14 +9,20 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto','8BIT WONDER', sans-serif;
 }
 
+// Mixins
+
+@mixin pokeball_open_on_hover {
+    &:hover {
+        cursor: pointer;
+    }   
+}
 
 
 .Landing_Page {
     background-image: url("./assets/wallpaper.jpeg");
-    // filter: grayscale(75%);
     height: 100vh;
     overflow: auto;
     background-position: center;
@@ -22,27 +32,66 @@ body {
 }
 
 .Page_Body {
-    margin: 25px;
-    padding: 15px;
-    border: 2.5px solid rgb(255, 237, 221);
-    border-radius: 15px;
+    position: relative;
+    margin: 0px 25px;
+    padding: 0px 15px;
+    border: 5px dotted;
+    border-image: linear-gradient( #ff0000, #000000, #ffffff);
+    border-image-slice: 1;
+    border-top: 0;
+    border-bottom: 0;
     height: 100vh;
-    background-color: rgba(255, 233, 213, 0.881);
+    top: -2vh;
+    background-color: rgba(255, 255, 255, 0.566);
+    box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
 
 }
 
 .Landing_Nav {
-    border: 1px solid black;
     border-radius: 100%;
-    width: 15vh;
-    height: 15vh;
-    background-color: pink;
+    width: $pokeball-ui-radius;
+    height: $pokeball-ui-radius;
+    background-color: white;
     position: fixed;
     z-index: 2;
     top: 95vh;
     left: 50%;
     transform: translate(-50%, -50%);
+
+
+
+        .Landing_Nav_Top {
+            background-color: red;
+            width: $pokeball-ui-radius;
+            height: 70px;
+            border-top-left-radius: 510px;
+            border-top-right-radius: 510px;
+            border-bottom: 5px solid black;
+            box-shadow: -15px -15px 45px 5px rgba(0,0,0,0.35);
+        } 
+
+        .Landing_Nav_Mid {
+            position: absolute;
+            left: 33%;
+            top: 33%;
+            border: 5px solid black;
+            background-color: white;
+            border-radius: 100%;
+            width: 5vh;
+            height: 5vh;
+            // margin: auto;
+            z-index: 3;
+
+            @include pokeball_open_on_hover;
+        }
+        
+        .pokeball_open {
+            background-color: yellow;
+        }
+
 }
+
+
 
 .Landing_Footer {
     background-color: whitesmoke;
@@ -51,4 +100,24 @@ body {
     position: fixed;
     z-index: 1;
     top: 95vh;
+    border-top: 3px solid rgb(109, 109, 109);
+    box-shadow: -1px -1px 45px 10px rgba(0,0,0,0.35);
+    font-family: '8BIT WONDER', sans-serif;
+    font-size: small;
+
+    ul {
+        li {            
+            // color: #3e3e3e;
+
+            button  {
+                background-color: transparent;
+                border: none;
+                color: #3e3e3e;
+                font-family: '8BIT WONDER', sans-serif;
+                font-size: small;
+                text-decoration: underline;
+                cursor: pointer;
+            }
+        }   
+    }
 }
