--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -9,6 +9,10 @@ body {
   font-family: "Roboto", "8BIT WONDER", sans-serif;
 }
 
+ul {
+  list-style: none;
+}
+
 .Landing_Page {
   background-image: url("./assets/wallpaper.jpeg");
   height: 100vh;
@@ -33,6 +37,54 @@ body {
   top: -2vh;
   background-color: rgba(255, 255, 255, 0.566);
   box-shadow: -4px -3px 45px 21px rgba(0, 0, 0, 0.35);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Page_Body .Page_Content {
+  position: relative;
+  border: 1px solid peachpuff;
+  background-color: peachpuff;
+  border-radius: 5px;
+  height: 50vh;
+  width: 65%;
+}
+.Page_Body .Page_Content .Page_Content_Center {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "8BIT WONDER", sans-serif;
+  font-size: small;
+  color: #3e3e3e;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 95%;
+  height: 80%;
+  background-image: url("./assets/pokememe.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.Page_Body .Page_Content .Page_Content_Buttons {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.Page_Body .Page_Content .Page_Content_Buttons button {
+  background-color: transparent;
+  border: none;
+  color: #3e3e3e;
+  font-family: "8BIT WONDER", sans-serif;
+  font-size: small;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .Landing_Nav {
