--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -46,7 +46,7 @@ ul {
   border: 1px solid peachpuff;
   background-color: peachpuff;
   border-radius: 5px;
-  height: 50vh;
+  height: 55%;
   width: 65%;
 }
 .Page_Body .Page_Content .Page_Content_Center {
