--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -57,7 +57,7 @@ ul {
         border: 1px solid peachpuff;
         background-color: peachpuff;
         border-radius: 5px;
-        height: 50vh; 
+        height: 55%; 
         width: 65%;
 
         .Page_Content_Center {
