--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -29,18 +29,16 @@ ul {
 
 .Page_Body {
   position: relative;
-  margin: 0px 25px;
-  padding: 0px 15px;
-  border: 5px dotted;
-  -o-border-image: linear-gradient(#ff0000, #000000, #ffffff);
-     border-image: linear-gradient(#ff0000, #000000, #ffffff);
+  margin: 0px 15%;
+  padding: auto;
+  border: 2.5px solid rgba(199, 88, 255, 0.5);
   border-image-slice: 1;
   border-top: 0;
   border-bottom: 0;
   height: 100vh;
   top: -2vh;
-  background-color: rgba(255, 255, 255, 0.566);
-  box-shadow: -4px -3px 45px 21px rgba(0, 0, 0, 0.35);
+  background-color: rgba(170, 0, 255, 0.2);
+  box-shadow: -4px -3px 100vw 15px rgba(243, 156, 255, 0.685);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,11 +51,40 @@ ul {
 }
 .Page_Body .Page_Content {
   position: relative;
-  border: 1px solid peachpuff;
-  background-color: peachpuff;
+  border: 1px solid rgba(199, 88, 255, 0.5);
+  background-color: #ffffff;
   border-radius: 5px;
   height: 55vh;
   width: 65vw;
+  margin: 15% 0;
+}
+.Page_Body .Page_Content .Page_Content_Top {
+  position: absolute;
+  margin: 5px;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 7vw;
+  height: 7vw;
+  z-index: 1;
+  border-radius: 50%;
+}
+.Page_Body .Page_Content .Page_Content_Top .Inner_Content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  border: 1px solid rgba(199, 88, 255, 0.5);
+  border-radius: 50%;
+  background-color: #ffffff;
+  background-image: url("./assets/pokememe.jpg");
+}
+.Page_Body .Page_Content .Page_Content_Top:hover {
+  cursor: pointer;
 }
 .Page_Body .Page_Content .Page_Content_Center {
   position: absolute;
@@ -68,7 +95,7 @@ ul {
   font-family: "8BIT WONDER", sans-serif;
   font-size: small;
   color: #3e3e3e;
-  border: 1px solid black;
+  border: 1px solid rgba(199, 88, 255, 0.5);
   border-radius: 5px;
   width: 95%;
   height: 80%;
@@ -77,6 +104,18 @@ ul {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+.Page_Body .Page_Content .Page_Content_Center .Inner_Content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: #ffffff;
+  background-image: url("./assets/pokememe.jpg");
 }
 .Page_Body .Page_Content .Page_Content_Buttons {
   position: absolute;
