--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/8bit-wonder');
 
 $pokeball-ui-radius:15vh;
+$outline-color: rgba(199, 88, 255, 0.5);
+$inner-color: #ffffff;
+$background-color: rgba(170, 0, 255, 0.20);
+$shadow-color: rgba(243, 156, 255, 0.685);
+
 
 * {
     margin: 0;
@@ -41,17 +46,16 @@ ul {
 
 .Page_Body {
     position: relative;
-    margin: 0px 25px;
-    padding: 0px 15px;
-    border: 5px dotted;
-    border-image: linear-gradient( #ff0000, #000000, #ffffff);
+    margin: 0px 15%;
+    padding: auto;
+    border: 2.5px solid $outline-color;
     border-image-slice: 1;
     border-top: 0;
     border-bottom: 0;
     height: 100vh;
     top: -2vh;
-    background-color: rgba(255, 255, 255, 0.566);
-    box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
+    background-color:$background-color;
+    box-shadow: -4px -3px 100vw 15px $shadow-color;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,11 +68,45 @@ ul {
 
     .Page_Content {
         position: relative;
-        border: 1px solid peachpuff;
-        background-color: peachpuff;
+        border: 1px solid $outline-color;
+        background-color: #ffffff;
         border-radius: 5px;
         height: 55vh; 
         width: 65vw;
+        margin: 15% 0;
+
+        .Page_Content_Top {
+            position: absolute;
+            margin: 5px;
+            top: 0;
+            left: 0;
+            display: flex;
+            width: 7vw;
+            height: 7vw;
+            z-index: 1;
+            border-radius: 50%;
+
+        .Inner_Content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            border: 1px solid $outline-color;
+            border-radius: 50%;
+            background-color: $inner-color;
+            background-image: url("./assets/pokememe.jpg");
+
+        }
+
+            &:hover {
+                    cursor: pointer;
+                }   
+            
+        }
 
         .Page_Content_Center {
             position: absolute;
@@ -79,7 +117,7 @@ ul {
             font-family: '8BIT WONDER', sans-serif;
             font-size: small;
             color: #3e3e3e;
-            border: 1px solid black;
+            border: 1px solid $outline-color;
             border-radius: 5px;
             width: 95%;
             height: 80%;
@@ -89,6 +127,19 @@ ul {
             background-repeat: no-repeat;
             background-attachment: fixed;
             
+            .Inner_Content {
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                background-color: $inner-color;
+                background-image: url("./assets/pokememe.jpg");
+
+            }
         }
 
         .Page_Content_Buttons {
@@ -189,7 +240,6 @@ ul {
         padding: 0;
 
         li {            
-            // color: #3e3e3e;
             display: inline;
 
             button  {
