--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -15,7 +15,7 @@ ul {
 
 .Landing_Page {
   background-image: url("./assets/wallpaper.jpeg");
-  height: 100vh;
+  height: 95vh;
   overflow: auto;
   background-position: center;
   background-size: cover;
@@ -150,7 +150,6 @@ ul {
   background-color: white;
   position: fixed;
   z-index: 2;
-  top: 90vh;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -183,11 +182,10 @@ ul {
 
 .Landing_Footer {
   background-color: whitesmoke;
-  height: 10vh;
+  height: 10%;
   width: 100vw;
   position: fixed;
   z-index: 1;
-  top: 90vh;
   border-top: 3px solid rgb(109, 109, 109);
   box-shadow: -1px -1px 45px 10px rgba(0, 0, 0, 0.35);
   font-family: "8BIT WONDER", sans-serif;
