--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -15,8 +15,8 @@ ul {
 
 .Landing_Page {
   background-image: url("./assets/wallpaper.jpeg");
-  height: 95vh;
-  overflow: auto;
+  height: 100vh;
+  overflow: hidden;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@ ul {
 
 .Page_Body {
   position: relative;
-  margin: 0px 5%;
+  margin: 0px 15%;
   padding: auto;
   border: 2.5px solid rgba(199, 88, 255, 0.5);
   border-image-slice: 1;
@@ -150,6 +150,7 @@ ul {
   background-color: white;
   position: fixed;
   z-index: 2;
+  top: 90vh;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -182,10 +183,11 @@ ul {
 
 .Landing_Footer {
   background-color: whitesmoke;
-  height: 10%;
+  height: 15vh;
   width: 100vw;
   position: fixed;
   z-index: 1;
+  top: 90vh;
   border-top: 3px solid rgb(109, 109, 109);
   box-shadow: -1px -1px 45px 10px rgba(0, 0, 0, 0.35);
   font-family: "8BIT WONDER", sans-serif;
