--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -32,8 +32,8 @@ ul {
 
 .Landing_Page {
     background-image: url("./assets/wallpaper.jpeg");
-    height: 95vh;
-    overflow: auto;
+    height: 100vh;
+    overflow: hidden;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@ ul {
 
 .Page_Body {
     position: relative;
-    margin: 0px 5%;
+    margin: 0px 15%;
     padding: auto;
     border: 2.5px solid $outline-color;
     border-image-slice: 1;
@@ -183,7 +183,7 @@ ul {
     background-color: white;
     position: fixed;
     z-index: 2;
-    // top: 95vh;
+    top: 90vh;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -224,11 +224,11 @@ ul {
 
 .Landing_Footer {
     background-color: whitesmoke;
-    height: 10%;
+    height: 15vh;
     width: 100vw;
     position: fixed;
     z-index: 1;
-    // top: 95vh;
+    top: 90vh;
     border-top: 3px solid rgb(109, 109, 109);
     box-shadow: -1px -1px 45px 10px rgba(0,0,0,0.35);
     font-family: '8BIT WONDER', sans-serif;
