--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -6,7 +6,7 @@ $inner-color: #ffffff;
 $background-color: rgba(255, 244, 254, 0.612);
 $shadow-color: rgba(248, 195, 255, 0.685);
 $font-color: rgb(255, 255, 255);
-$footer-color: whitesmoke;
+$footer-color: rgb(186, 186, 186);
 
 
 * {
@@ -249,7 +249,7 @@ ul {
 
 .Landing_Footer {
     background-color: whitesmoke;
-    height: 15vh;
+    height: 10vh;
     width: 100vw;
     position: fixed;
     z-index: 1;
@@ -277,5 +277,12 @@ ul {
                 cursor: pointer;
             }
         }   
+    }
+
+    .Landing_Footer_Bottom {
+        color: $footer-color;
+        position: absolute;
+        bottom: 0px;
+        font-size: x-small;
     }
 }
