--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -22,6 +22,16 @@ ul {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+.Landing_Page .Landing_Page_Logo {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  z-index: 2;
+  width: auto;
+  height: 7%;
+  margin: 10px;
+  padding: auto;
+}
 
 .Page_Body::-webkit-scrollbar {
   width: 0.5em;
@@ -31,7 +41,7 @@ ul {
   position: relative;
   margin: 0px auto;
   padding: auto;
-  border: 5px solid rgba(199, 88, 255, 0.5);
+  border: 5px solid rgb(255, 230, 0);
   border-image-slice: 1;
   border-top: 0;
   border-bottom: 0;
@@ -49,7 +59,7 @@ ul {
 }
 .Page_Body .Page_Content {
   position: relative;
-  border: 1px solid rgba(199, 88, 255, 0.5);
+  border: 1px solid rgb(255, 230, 0);
   background-color: #ffffff;
   border-radius: 5px;
   height: 50vw;
@@ -81,7 +91,7 @@ ul {
   text-align: center;
   font-size: large;
   font-weight: bold;
-  text-shadow: 1px 1px 10px rgba(199, 88, 255, 0.5);
+  text-shadow: 1px 1px 10px rgb(255, 230, 0);
   color: rgb(255, 255, 255);
 }
 .Page_Body .Page_Content .Page_Content_Top .Inner_Content {
@@ -93,7 +103,7 @@ ul {
   width: 100%;
   height: 100%;
   z-index: 1;
-  border: 1px solid rgba(199, 88, 255, 0.5);
+  border: 1px solid rgb(255, 230, 0);
   border-radius: 50%;
   background-color: #ffffff;
 }
@@ -110,7 +120,7 @@ ul {
   font-family: "8BIT WONDER", sans-serif;
   font-size: small;
   color: #3e3e3e;
-  border: 1px solid rgba(199, 88, 255, 0.5);
+  border: 1px solid rgb(255, 230, 0);
   border-radius: 5px;
   width: 95%;
   height: 80%;
@@ -194,6 +204,23 @@ ul {
 .Landing_Nav .Landing_Nav_Mid:hover {
   cursor: pointer;
 }
+.Landing_Nav .PokeBall_Nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button {
+  display: inline;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button button {
+  background-color: transparent;
+  border: none;
+  color: #3e3e3e;
+  font-family: "8BIT WONDER", sans-serif;
+  font-size: small;
+  text-decoration: underline;
+  cursor: pointer;
+}
 .Landing_Nav .pokeball_open {
   background-color: yellow;
 }
@@ -205,26 +232,9 @@ ul {
   position: fixed;
   z-index: 1;
   top: 90vh;
-  border-top: 3px solid rgb(109, 109, 109);
+  border-top: 3px solid blue;
   box-shadow: -1px -1px 45px 10px rgba(0, 0, 0, 0.35);
   font-size: small;
-}
-.Landing_Footer ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.Landing_Footer ul li {
-  display: inline;
-}
-.Landing_Footer ul li button {
-  background-color: transparent;
-  border: none;
-  color: #3e3e3e;
-  font-family: "8BIT WONDER", sans-serif;
-  font-size: small;
-  text-decoration: underline;
-  cursor: pointer;
 }
 .Landing_Footer .Landing_Footer_Bottom {
   color: rgb(186, 186, 186);
@@ -232,4 +242,8 @@ ul {
   bottom: 0px;
   font-size: small;
   padding: 5px 0px;
+}
+
+.invisible {
+  display: none;
 }/*# sourceMappingURL=StyleRoot.css.map */
