--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -116,8 +116,8 @@ ul {
                     font-size: large;
                     font-weight: bold;
                     // text-decoration: underline;
-                    text-shadow: 1px 1px 10px $outline-color;
-                    color: $font-color;
+                    color: $outline-color;
+                    text-shadow: 1px 1px 10px $sub-outline-color;
                 }
             }
 
@@ -304,3 +304,17 @@ ul {
 .invisible {
     display: none;
 }
+
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+    .Page_Content {
+        width: 100vw;
+        height: 100vw;
+    
+    }
+}
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
