--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -40,7 +40,7 @@ ul {
 .Page_Body {
   position: relative;
   margin: 0px auto;
-  padding: auto;
+  padding: 10% 0 20% 0;
   border: 5px solid rgb(255, 230, 0);
   border-image-slice: 1;
   border-top: 0;
