--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -142,28 +142,36 @@ ul {
 }
 .Page_Body .Page_Content .Page_Content_Buttons {
   position: absolute;
-  bottom: 0;
+  bottom: 1em;
   right: 0;
   margin: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
+  padding: auto;
+  margin: auto;
 }
 .Page_Body .Page_Content .Page_Content_Buttons ul {
   list-style-type: none;
   margin: auto;
   padding: auto;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 5em;
 }
 .Page_Body .Page_Content .Page_Content_Buttons ul li {
   display: inline;
-  margin: 0 5px;
 }
 .Page_Body .Page_Content .Page_Content_Buttons button {
   background-color: transparent;
   border: none;
   color: #3e3e3e;
   font-family: "8BIT WONDER", sans-serif;
-  font-size: small;
+  font-size: large;
   cursor: pointer;
 }
 .Page_Body .Page_Content .Page_Content_Buttons button:hover {
