--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -178,21 +178,31 @@ ul {
 
         .Page_Content_Buttons {
             position: absolute;
-            bottom: 0;
+            bottom: 1em;
             right: 0;
             margin: 10px;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             width: 100%;
+            padding: auto;
+            margin: auto;
+            // border: 1px solid $outline-color;
 
             ul { 
                 list-style-type: none;
                 margin: auto;
                 padding: auto;
+                width: auto;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                grid-gap: 5em;
             
                 li {
                     display: inline;
-                    margin: 0 5px;
+                    // border: 1px solid $outline-color;
                 }
             }
 
@@ -201,7 +211,7 @@ ul {
                 border: none;
                 color: #3e3e3e;
                 font-family: '8BIT WONDER', sans-serif;
-                font-size: small;
+                font-size: large;
                 cursor: pointer;
 
                 &:hover {
