--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -83,8 +83,8 @@ ul {
         border: 1px solid $outline-color;
         background-color: #ffffff;
         border-radius: 5px;
-        height: 60vw; 
-        width: 80vw;
+        height: 65vw; 
+        width: 95vw;
         margin: 10% 0;
 
         .Page_Content_Top {
@@ -211,7 +211,7 @@ ul {
                 border: none;
                 color: #3e3e3e;
                 font-family: '8BIT WONDER', sans-serif;
-                font-size: large;
+                font-size: XX-large;
                 cursor: pointer;
 
                 &:hover {
