--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -161,6 +161,7 @@ ul {
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            padding: auto;
             
             .Inner_Content {
                 position: absolute;
