--- a/src/Pages/StyleRoot.css
+++ b/src/Pages/StyleRoot.css
@@ -13,6 +13,16 @@ ul {
   list-style: none;
 }
 
+h1 {
+  position: absolute;
+  text-align: center;
+  font-family: "8BIT WONDER", sans-serif;
+  top: 50%;
+  width: 100%;
+  color: rgb(255, 230, 0);
+  text-shadow: 1px 1px 1px blue, -1px -1px 1px blue, 0 0 1px blue, 0 0 2.5px blue;
+}
+
 .Landing_Page {
   background-image: url("./assets/wallpaper.jpeg");
   height: 100vh;
@@ -22,7 +32,8 @@ ul {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-.Landing_Page .Landing_Page_Logo {
+
+.Landing_Page_Logo {
   position: absolute;
   left: 0%;
   top: 0%;
@@ -40,7 +51,7 @@ ul {
 .Page_Body {
   position: relative;
   margin: 0px auto;
-  padding: 10% 0 30% 0;
+  padding: 5% 0 30% 0;
   border: 5px solid rgb(255, 230, 0);
   border-image-slice: 1;
   border-top: 0;
@@ -242,7 +253,7 @@ ul {
   padding: auto;
   margin: 1em;
 }
-.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button button {
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a {
   background-color: transparent;
   border: none;
   color: #3e3e3e;
@@ -254,7 +265,23 @@ ul {
   margin: auto;
   padding: auto;
 }
-.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button button:hover {
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a:link {
+  color: #3e3e3e;
+  text-decoration: none;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a:visited {
+  color: #3e3e3e;
+  text-decoration: none;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a:active {
+  color: #3e3e3e;
+  text-decoration: none;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a:hover {
+  color: #3e3e3e;
+  text-decoration: underline;
+}
+.Landing_Nav .PokeBall_Nav .PokeBall_Nav_Button a:hover {
   text-decoration: underline;
 }
 .Landing_Nav .pokeball_open {
@@ -277,7 +304,7 @@ ul {
   color: rgb(186, 186, 186);
   position: absolute;
   bottom: 0px;
-  font-size: small;
+  font-size: 1vw;
   padding: 5px 0px;
 }
 
@@ -290,6 +317,9 @@ ul {
     width: 100vw;
     height: 100vw;
     font-size: auto;
+  }
+  .Landing_Footer_Bottom {
+    font-size: 2vw;
   }
 }
 @media (min-width: 481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
