--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -33,6 +33,16 @@ ul {
     list-style: none;
 }
 
+h1 { 
+    position: absolute;
+    text-align: center;
+    font-family: '8BIT WONDER', sans-serif;
+    top: 50%;
+    width: 100%;
+    color: $outline-color;
+    text-shadow: 1px 1px 1px $sub-outline-color, -1px -1px 1px $sub-outline-color, 0 0 1px $sub-outline-color, 0 0 2.5px $sub-outline-color;
+}
+
 
 .Landing_Page {
     background-image: url("./assets/wallpaper.jpeg");
@@ -42,17 +52,18 @@ ul {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    
+}
 
-    .Landing_Page_Logo {
-        position: absolute;
-        left: 0%;
-        top: 0%;
-        z-index: 2;
-        width: auto;
-        height: 7%;
-        margin: 10px;
-        padding: auto;
-    }
+.Landing_Page_Logo {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    z-index: 2;
+    width: auto;
+    height: 7%;
+    margin: 10px;
+    padding: auto;
 }
 
 .Page_Body::-webkit-scrollbar {
@@ -62,7 +73,7 @@ ul {
 .Page_Body {
     position: relative;
     margin: 0px auto;
-    padding: 10% 0 30% 0;
+    padding: 5% 0 30% 0;
     border: 5px solid $outline-color;
     border-image-slice: 1;
     border-top: 0;
@@ -291,7 +302,7 @@ ul {
                 padding: auto;
                 margin: 1em;
 
-                button  {
+                a  {
                     background-color: transparent;
                     border: none;
                     color: $sub-font-color;
@@ -303,6 +314,26 @@ ul {
                     margin: auto;
                     padding: auto;
 
+                    &:link{
+                        color: $sub-font-color;
+                        text-decoration: none;
+                    }
+
+                    &:visited {
+                        color: $sub-font-color;
+                        text-decoration: none;    
+                    }
+
+                    &:active {
+                        color: $sub-font-color;
+                        text-decoration: none;    
+                    }
+
+                    &:hover {
+                        color: $sub-font-color;
+                        text-decoration: underline;
+                    }
+                
                     &:hover {
                         text-decoration: underline;
                     }
@@ -335,7 +366,7 @@ ul {
         color: $footer-color;
         position: absolute;
         bottom: 0px;
-        font-size: small;
+        font-size: 1vw;
         padding: 5px 0px;
     }
 }
@@ -353,6 +384,11 @@ ul {
         height: 100vw;
         font-size: auto;
     }
+
+    .Landing_Footer_Bottom {
+        font-size: 2vw;
+    }
+
 }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
     .Page_Content {
