--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -302,7 +302,7 @@ h1 {
                 padding: auto;
                 margin: 1em;
 
-                a  {
+                button  {
                     background-color: transparent;
                     border: none;
                     color: $sub-font-color;
